# apex-swe-harness

./: .gitignore  COMMANDS.md  EC2_TESTING.md  INSTALL.md  README.md  STRUCTURE.md
.github/workflows/: ci.yml
apex_code/: setup.py
integration/: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  pyproject.toml  pytest.ini  setup.py
integration/apex_code/: README.md  config.py  pyproject.toml
integration/apex_code/cli/: main.py
integration/apex_code/cli/datasets/: __init__.py  constants.py  main.py  models.py  registry_client.py
integration/apex_code/cli/reports/: __init__.py  main.py
integration/apex_code/cli/runs/: __init__.py  main.py
integration/apex_code/cli/tasks/: __init__.py  main.py
integration/apex_code/cli/utils/: __init__.py  common.py  rich_helpers.py
integration/apex_code/harness/: __init__.py  docker_manager.py  evaluator.py  executor.py  logging_utils.py  models.py  multi_step_runner.py  terminal_manager.py  utils.py
integration/apex_code/llms/: __init__.py  base_llm.py  llm.py  mock_llm.py  oracle_llm.py  oracle_model.py  utils.py
integration/apex_code/tools/: __init__.py  file_tool.py  interface.py  terminal_tool.py  todo_tool.py  tool_executor.py  utils.py
integration/apex_code/utils/: logging_utils.py  prompt_utils.py
integration/docs/: ARCHITECTURE.md  MIGRATION.md  TESTING.md
integration/examples/: basic_usage.sh  python_usage.py
integration/scripts/: run_integ_set.sh  validate_refactoring.py
integration/src/apex_harness/: __init__.py  cli.py  docker_utils.py  models.py  reporting.py  runner.py  status_tracker.py  task_discovery.py  task_executor.py
integration/tasks/: .gitkeep
integration/tests/: __init__.py  test_cli.py  test_integration.py  test_models.py  test_reporting.py  test_status_tracker.py  test_task_discovery.py
